# gaza-israel-conflict-impact-analysis

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.html  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml  pre-commit.yml
_sources/: README.md
_sources/docs/: CONTRIBUTING.md  data.md  introduction-to-data-goods.md
_sources/notebooks/damage-assessment/: README.md  damage-assessment.ipynb
_sources/notebooks/mobility/: README.md
_sources/notebooks/nighttime-lights/: README.md  nighttime-lights-in-jordan.ipynb  nighttime-lights.ipynb
_sources/notebooks/sample-indicators/: health.ipynb  housing-and-community.ipynb  industry-and-commerce.ipynb
_sources/reports/20240202/: README.md
_sources/reports/sample-indicators/: industry-and-commerce.ipynb
docs/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  _config.yml  _toc.yml  bibliography.bib  data.html  data.md  foundational_datasets_and_data_products.html  foundational_datasets_and_data_products.md  gallery.html  introduction-to-data-goods.html  introduction-to-data-goods.md  introduction_to_data_goods.html  team.html  team.md
notebooks/: bibliography.html  environment.yml  nasa-apod.html  world-bank-api.html  world-bank-package.html
notebooks/air-pollution/: README.html  README.md
notebooks/conflict/: acled.html  acled.ipynb
notebooks/damage-assessment/: README.html  README.md  damage-assessment.html  damage-assessment.ipynb
notebooks/mobility/: README.html  README.md  activity_index_map.html  mapbox.html  mapbox.ipynb
notebooks/nighttime-lights/: README.html  README.md  R_nighttime-lights.ipynb  nighttime-lights-in-jordan.html  nighttime-lights-in-jordan.ipynb  nighttime-lights.html  nighttime-lights.ipynb
notebooks/sample-indicators/: health.html  health.ipynb  housing-and-community.html  housing-and-community.ipynb  industry-and-commerce.html  industry-and-commerce.ipynb  sample-indicators.html  sample-indicators.md
notebooks/solar-panel-detection/: README.html  README.md  panel-detection-gaza.ipynb
notebooks/solar-panel-segmentation/: README.html  panel-detection-gaza.html  panel-detection-gaza.ipynb  requirements.txt  setup.cfg  setup.py  versioneer.py
notebooks/solar_panel_segmentation/: panel_detection_gaza.ipynb
reports/: README.html  README.md
reports/20240202/: README.html  README.md
reports/20240317/: README.html  README.md
reports/sample-indicators/: health.html  health.ipynb  housing-and-community.html  industry-and-commerce.html
src/gaza_israel_conflict_analysis/: __init__.py
src/gaza_israel_conflict_analysis/movement_analysis/: h3_functions.py  visuals.py
src/gaza_israel_conflict_impact_analysis/: __init__.py
src/gaza_israel_conflict_impact_analysis/movement_analysis/: h3_functions.py  visuals.py
