[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "gaza-israel-conflict-impact-analysis"
description = "Using Alternative Data to Understand Economic Impacts of the 2023 Gaza-Israel Conflict"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = [
	"sentinel",
	"synthetic aperture radar",
	"nighttime lights",
	"black marble",
	"world bank",
]
authors = [{ name = "World Bank Data Lab", email = "datalab@worldbank.org" }]
maintainers = [
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
docs = [
	"docutils==0.17.1",     # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=0.15.1",
]
[project.urls]
"Homepage" = "https://datapartnership.github.io/gaza-israel-conflict-impact-analysis"
"Bug Reports" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis/issues"
"Source" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis"

[tool.codespell]
skip = './.git,docs/_build,docs/references.bib,*.py,*.R,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.hatch.build.targets.wheel]
packages = ["src/gaza-israel-conflict-impact-analysis"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
