[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaza_israel_conflict_analysis"
dynamic = ["version"]
description = "An Python package to support the Gaza Israel Conflict Impact Analysis"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = [
	"world bank",
	"reproducible research",
	"conflict monitor",
	"gaza",
]
authors = [
	{ name = "World Bank Development Data Group", email = "datalab@worldbank.org" },
]
maintainers = [
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
	{ name = "Sahiti Sarva", email = "ssarva@worldbank.org" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = ["pandas>=2"]
[project.optional-dependencies]
notebook = ["notebook>=6.5.2"]

[project.urls]
"Homepage" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis"
"Bug Reports" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis/issues"
"Source" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis"

[tool.setuptools.dynamic]
version = { attr = "gaza_israel_conflict_analysis.__version__" }
