[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "gaza-israel-conflict-impact-analysis"
description = "A Python package to support the Gaza Israel Conflict Impact Analysis"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = [
	"gaza",
	"reproducible research",
	"world bank",
]
authors = [
	{ name = "World Bank Data Lab", email = "datalab@worldbank.org" },
]
maintainers = [
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
	{ name = "Sahiti Sarva", email = "ssarva@worldbank.org" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = ["pandas>=2"]
[project.optional-dependencies]
notebook = ["notebook>=6.5.2"]
docs = [
	"docutils==0.17.1",    # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis"
"Bug Reports" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis/issues"
"Source" = "https://github.com/datapartnership/gaza-israel-conflict-impact-analysis"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.hatch.build.targets.wheel]
packages = ["src/gaza_israel_conflict_impact_analysis"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
